<resources>
    <string name="app_name">Help</string>
    <string name="logIn">Вход</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="terminal">Терминал</string>
    <string name="stock">Склад</string>
    <string name="settings">Настройки</string>
    <string name="users">Пользователи</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="role">Роль</string>
    <string name="userimage">UserImage</string>
    <string name="general">Основное</string>
    <string name="extra">Дополнительно</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="button">Button</string>
    <string name="categories">Категории</string>
    <string name="measeureUnits">Единицы измерения</string>
    <string name="search">Поиск</string>
    <string name="find">Найти</string>
    <string name="title_activity_settings_tab">SettingsTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="authorizationToken">Authorization</string>
    <string name="category">Категория</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отменить</string>
    <string name="measureUnit">Единица измерения</string>
    <string name="save">Сохранить</string>
    <string name="newValue">Новое значение</string>
    <string name="delete">Удалить</string>
    <string name="menu_products">Продукты</string>
    <string name="menu_terminal">Терминал</string>
    <string name="menu_stock">Склад</string>
    <string name="menu_add_product">Добавить</string>
    <string name="cost">Цена</string>
    <string name="quantity">Количество</string>
    <string name="productName">Название продукта</string>
    <string name="not_all_fields_are_filled">Не все поля заполнены</string>
    <string name="filter">Фильтр</string>
    <string name="for_sale">На продажу</string>
    <string name="active">Активные</string>
    <string name="active_product">Активный продукт</string>
    <string name="product">Продукт</string>
    <string name="edit">Редактировать</string>
    <string name="done">Готово</string>
    <string name="in_out">Приход/Расход</string>
    <string name="in">Приход</string>
    <string name="out">Расход</string>
    <string name="add_to">Добавить в</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="new_doc">Новый документ</string>
    <string name="choose_product">Выбрать продукт</string>
    <string name="type">Тип</string>
    <string name="form_document">Сформировать документ</string>
    <string name="document">Документ</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="start_new_order">Начать новый заказ?</string>
    <string name="order_number">Заказ №</string>
    <string name="order">Заказать</string>
    <string name="qty">"Количество: "</string>
    <string name="menu">Меню</string>
    <string name="approve_order">Подтвердить заказ</string>
    <string name="this_order">Заказ</string>
    <string name="finish_order">Завершить заказ</string>
    <string name="cancel_order">Завершить заказ?</string>
    <string name="tables">Столы</string>
    <string name="insert_required_number_of_tables_to_delete_or_insert">Введите необходимое число столов для добавления или удаления</string>
    <string name="move_to_terminal">Заказ завершен. Возьмите чек! Перейти к основному меню?</string>
    <string name="sum">Итого</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="ip">IP адрес</string>
    <string name="saved">Сохранено</string>
    <string name="tip">Чаевые (%)</string>
    <string name="just_tip">Чаевые</string>
    <string name="report">Отчет</string>
    <string name="summ">Общая сумма</string>
    <string name="uz_sum">сум</string>
    <string name="final_sum">Всего</string>
    <string name="table_i_serve">Я обслуживаю</string>
    <string name="logout">Выйти</string>
    <string name="order_history">История заказов</string>
    <string name="order_status">Статус заказа</string>
    <string name="waiter">Официант</string>
    <string name="from">От</string>
    <string name="logIn_system">Вход в систему</string>
    <string name="autorization_error_wrong_password">Ошибка авторизации! Неверный логин или пароль</string>
    <string name="content_type">application/json</string>
    <string name="wrong_addres">Не возможно подключиться к серверу. Проверьте правильность IP адреса.</string>
    <string name="change_ip">Изменить IP-адрес сервера</string>


    <string-array name="categoriesSpinner">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>
</resources>