<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_products"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_product"
            android:title="@string/menu_stock" />

        <item
            android:id="@+id/nav_in_out_stock"
            android:icon="@drawable/ic_shopping_basket_24"
            android:title="@string/in_out" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/logOutBtn"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />

    </group>
</menu>