<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_terminal" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/order_history" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/logOutBtn"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />

    </group>
</menu>