<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_terminal">


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kamilamalikova.help.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.kamilamalikova.help.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_product_to_add_product"
            app:destination="@+id/addProductFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_terminal"
        android:name="com.kamilamalikova.help.ui.terminal.TerminalFragment"
        android:label="@string/menu_terminal"
        tools:layout="@layout/fragment_terminal" />
    <fragment
        android:id="@+id/nav_stock"
        android:name="com.kamilamalikova.help.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.kamilamalikova.help.ui.products.fragments.AddProductFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_add_product" />


</navigation>