<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.products.fragments.ProductDetailsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/detailProductNameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#009688"
        android:enabled="false"
        android:hint="@string/productName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/detailCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="@string/category"
        android:backgroundTint="#009688"
        android:contentDescription="@string/category"
        android:outlineProvider="bounds"
        android:scrollbarStyle="outsideOverlay"
        android:touchscreenBlocksFocus="true" />

    <Spinner
        android:id="@+id/detailUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="@string/measureUnit"
        android:backgroundTint="#009688"
        android:contentDescription="@string/measureUnit"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:layout_marginHorizontal="20dp"
        android:textSize="16dp"/>
    <EditText
        android:id="@+id/detailCostTextNumberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#009688"
        android:enabled="false"
        android:hint="@string/cost"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginHorizontal="20dp"
        android:textSize="16dp"/>
    <EditText
        android:id="@+id/detailQuantityTextNumberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#009688"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/detailActiveSwitchCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#009688"
        android:enabled="false"
        android:text="@string/active_product"
        android:textSize="20dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/detailRestaurantSwitchCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/for_sale"
        android:textSize="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>