<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="343dp"
        android:background="@drawable/button_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352">

        <EditText
            android:id="@+id/filterProductNameTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#009688"
            android:ems="10"
            android:hint="@string/productName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp" />


        <Spinner
            android:id="@+id/filterCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:autofillHints="@string/category"
            android:backgroundTint="#009688"
            android:contentDescription="@string/category"
            android:outlineProvider="bounds"
            android:scrollbarStyle="outsideOverlay" />

        <CheckBox
            android:id="@+id/activeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:checked="true"
            android:text="@string/active"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/restaurantCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:checked="true"
            android:text="@string/for_sale"
            android:textSize="20sp" />


        <Button
            android:id="@+id/filterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/button_border"
            android:paddingHorizontal="10dp"
            android:text="@string/filter" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>