<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.terminal.fragments.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/openMenuBtn"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orderNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textAlignment="center"
            android:textColor="#11201F"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sumNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:visibility="invisible"
            android:text="@string/sum" />

        <ListView
            android:id="@+id/orderProductListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/openMenuBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="0dp"
        android:background="@color/main_color"
        android:text="@string/menu"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>